src/objects/Organisation_Link__c.object
<CustomObject>
    <fields>
        <fullName>Expiry_date__c</fullName>
        <label>Expiry Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Organisation__c</fullName>
        <label>Organisation</label>
        <referenceTo>Organisation__c</referenceTo>
        <relationshipLabel>Organisation Links</relationshipLabel>
        <relationshipName>Organisation_Links</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <label>Organisation Link</label>
    <nameField>
        <label>Link Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Organisation Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>